aks-demo/keen.yml
apiVersion: v1
kind: Service
metadata:
  name: keen
  labels:
    app: keen
spec:
  ports:
  - port: 80
    targetPort: 6080  
    name: http
  selector:
    app: keen
  type: LoadBalancer  
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: keen
spec:
  selector:
    matchLabels:
      app: keen
  replicas: 1
  template:
    metadata:
      labels:
        app: keen
    spec:
      containers:
      - name: keen-kontainer
        image: blaize/keen
        ports:
        - containerPort: 6080
