aks-demo/nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-service
spec:
  ports:
  - port: 80
    targetPort: 80  
    name: http
  selector:
    app: nginx
  type: LoadBalancer
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: probe-container
        image: nginx
        ports:
        - containerPort: 80
