aks-demo/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  labels:
    app: ingress  
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/websocket-services: "keen,prince"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: probe
          servicePort: 80      
      - path: /keen
        backend:
          serviceName: keen
          servicePort: 80
      - path: /prince
        backend:
          serviceName: prince
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: probe
  labels:
    app: probe
spec:
  ports:
  - port: 80
    targetPort: 80  
    name: http
  selector:
    app: probe
  type: ClusterIP  
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: probe
spec:
  selector:
    matchLabels:
      app: probe
  replicas: 1
  template:
    metadata:
      labels:
        app: probe
    spec:
      containers:
      - name: probe-container
        image: nginx
        ports:
        - containerPort: 80          
---
apiVersion: v1
kind: Service
metadata:
  name: keen
  labels:
    app: keen
spec:
  ports:
  - port: 80
    targetPort: 6080  
    name: http
  selector:
    app: keen
  type: ClusterIP  
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: keen
spec:
  selector:
    matchLabels:
      app: keen
  replicas: 1
  template:
    metadata:
      labels:
        app: keen
    spec:
      containers:
      - name: keen-kontainer
        image: blaize/keen
        ports:
        - containerPort: 6080
---
apiVersion: v1
kind: Service
metadata:
  name: prince
  labels:
    app: prince
spec:
  ports:
  - port: 80
    targetPort: 6080    
    name: http
  selector:
    app: prince
  type: ClusterIP
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: prince
spec:
  selector:
    matchLabels:
      app: prince
  replicas: 1
  template:
    metadata:
      labels:
        app: prince
    spec:
      containers:
      - name: prince-container
        image: blaize/prince
        ports:
        - containerPort: 6080
